cmake_minimum_required(VERSION 3.1)
project(OpenExpertSDR)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -U__STRICT_ANSI__") #try compiler to make segfault

add_definitions(-DUNICODE -D_UNICODE) # for qextserialenumerator

FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
INCLUDE(${QT_USE_FILE})

set(SOURCES
    CalibrateSC/Calibrator/CalibrProc.cpp
    CalibrateSC/Calibrator/Calibrator.cpp
    Wav/fileList.cpp
    Wav/wavSample.cpp
    WavReader.cpp
    SmeterGUI/ColorWgt.cpp
    SmeterGUI/SMeterOptions.cpp
    SmeterGUI/SMeterSDR.cpp
    AudioThread.cpp
    scale/Scale.cpp
    scale/ScaleNum.cpp
    CW/CwCore.cpp
    CW/CwMacro.cpp
    CW/CwTimer.cpp
    CW/correctIQ.cpp
    Vac.cpp
    ringBuf.cpp
    Cat/ExtSerialPort/qextserialbase.cpp
    Cat/ExtSerialPort/qextserialenumerator.cpp
    Cat/ExtSerialPort/qextserialport.cpp
    Cat/ExtSerialPort/win_qextserialport.cpp
    SdrPlugin/PortAudio/pa19.cpp
    Valcoder/HID/Ea1dev.cpp
    Valcoder/Panel.cpp
    S-Meter/Number2.cpp
    S-Meter/Number.cpp
    S-Meter/Draw.cpp
    S-Meter/S_Meter.cpp
    ExpertSDR_vA2_1.cpp
    Panarama.cpp
    PanoramOpt.cpp
    ThreadFunc.cpp
    About.cpp
    CalibrateSC/progresscalibrate.cpp
    Cat/CatManager.cpp
    DttSP.cpp
    FreqScale/Didgit.cpp
    Options.cpp
    SMeter.cpp
    SdrPlugin/SdrPlugin.cpp
    WdgAddStation.cpp
    WdgGraph.cpp
    WdgMem.cpp
    main.cpp
    Wav/VoiceRecorderWave.cpp
    Logger/VLogger.cpp
    Resampler.cpp
    Timer/Timer.cpp
    RingResampler/RingResampler.cpp
    RingResampler/RingBuffer.cpp
    SdrPlugin/PluginCtrl.cpp
    SdrPlugin/extioplugin.cpp
    dttsplibrary.cpp
    GLFont/glfont.cpp
    bands/BandManager.cpp
    bands/ModeOptions.cpp)

set(HEADERS
    CalibrateSC/Calibrator/CalibrProc.h
    CalibrateSC/Calibrator/Calibrator.h
    Wav/fileList.h
    Wav/wavSample.h
    WavReader.h
    SmeterGUI/ColorWgt.h
    SmeterGUI/SMeterOptions.h
    SmeterGUI/SMeterSDR.h
    AudioThread.h
    scale/Scale.h
    scale/ScaleNum.h
    CW/CwCore.h
    CW/CwMacro.h
    CW/CwTimer.h
    CW/correctIQ.h
    Vac.h
    ringBuf.h
    Cat/ExtSerialPort/qextserialbase.h
    Cat/ExtSerialPort/qextserialenumerator.h
    Cat/ExtSerialPort/qextserialport.h
    Cat/ExtSerialPort/win_qextserialport.h
    SdrPlugin/PortAudio/pa19.h
    SdrPlugin/PortAudio/portaudio.h
    Valcoder/HID/Ea1dev.h
    Valcoder/Panel.h
    S-Meter/Number2.h
    S-Meter/Number.h
    S-Meter/Draw.h
    S-Meter/S_Meter.h
    PanaramDefines.h
    Panarama.h
    PanoramOpt.h
    ThreadFunc.h
    About.h
    CalibrateSC/progresscalibrate.h
    Cat/CatManager.h
    Defines.h
    DttSP.h
    ExpertSDR_vA2_1.h
    FreqScale/Didgit.h
    Options.h
    SMeter.h
    SdrPlugin/SdrPlugin.h
    WdgAddStation.h
    WdgGraph.h
    WdgMem.h
    Wav/VoiceRecorderWave.h
    Logger/VLogger.h
    Resampler.h
    Timer/Timer.h
    RingResampler/RingResampler.h
    RingResampler/RingBuffer.h
    SdrPlugin/PluginCtrl.h
    SdrPlugin/extioplugin.h
    dttsplibrary.h
    GLFont/glfont.h
    bands/BandManager.h
    bands/ModeOptions.h)

QT4_WRAP_UI(FORMS
    CalibrateSC/Calibrator/Calibrator.ui
    Wav/fileList.ui
    Wav/wavSample.ui
    SmeterGUI/SMeterOptions.ui
    scale/Scale.ui
    CW/CwMacro.ui
    Valcoder/Panel.ui
    S-Meter/Number2.ui
    S-Meter/Number.ui
    S-Meter/S_Meter.ui
    PanoramOpt.ui
    About.ui
    CalibrateSC/progresscalibrate.ui
    ExpertSDR_vA2_1.ui
    Options.ui
    SMeter.ui
    WdgAddStation.ui
    WdgGraph.ui
    WdgMem.ui)

qt4_add_resources(RESOURCES
    images.qrc
    bg.qrc)

QT4_WRAP_CPP(MOC_SOURCES ${HEADERS})

set(LIBRARIES
    -lhid
    -lwinmm
    -lsetupapi
    ${PROJECT_SOURCE_DIR}/portaudio_x86.lib
    -lopengl32
    -lglu32)

include_directories(${PROJECT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_BINARY_DIR}) #for correct include autogenerated ui_*.h files

add_executable(OpenExpertSDR ${HEADERS} ${SOURCES} ${FORMS} ${MOC_SOURCES} ${RESOURCES})
TARGET_LINK_LIBRARIES(OpenExpertSDR ${QT_LIBRARIES} ${LIBRARIES})